--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/nyu-csci-ua-0467-001-002-fall-2022/homework01-yanggezheng/issues"
   },
-  "homepage": "https://github.com/nyu-csci-ua-0467-001-002-fall-2022/homework01-yanggezheng#readme"
+  "homepage": "https://github.com/nyu-csci-ua-0467-001-002-fall-2022/homework01-yanggezheng#readme",
+  "dependencies": {
+    "clear": "^0.1.0",
+    "readline-sync": "^1.4.10"
+  }
 }
